--- a/front/.env.aws
+++ b/front/.env.aws
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=http://ph5-aws-alb-1030546736.ap-northeast-1.elb.amazonaws.com
+REACT_APP_API_URL=https://api.jfujiya.sandbox.dev.saasus.io
