--- a/front/.env.aws
+++ b/front/.env.aws
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://api.jfujiya.sandbox.dev.saasus.io
+REACT_APP_API_URL=https://api.jfujiya.sandbox.dev.saasus.io/api
 LOG_CHANNEL=stderr
