--- a/docker/nginx/Dockerfile.aws
+++ b/docker/nginx/Dockerfile.aws
@@ -2,3 +2,7 @@ FROM nginx
 
 COPY ./docker/nginx/default.conf.aws /etc/nginx/conf.d/default.conf
 COPY ./backend /work/web
+
+RUN cd /work/web \
+  && composer install \
+  && chmod -R 777 ./storage
