--- a/docker/php/Dockerfile.aws
+++ b/docker/php/Dockerfile.aws
@@ -26,7 +26,8 @@ RUN mv /work/web/.env.aws /work/web/.env
 # Laravel環境準備のコマンド
 RUN cd /work/web \
   && composer install \
-  && chmod -R 777 /work/web/storage
+  && chmod -R 777 /work/web/storage \
+  && chown -R www-data:www-data /work/web/storage
 
 # 起動スクリプトコピー&権限付与
 COPY ./docker/php/startup.sh /usr/local/bin/
