--- a/backend/.env.aws
+++ b/backend/.env.aws
@@ -9,7 +9,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=ph5aws.cluster-xxxxxxxxxx.ap-northeast-1.rds.amazonaws.com
+DB_HOST=ph5aws.cluster-c9oqwa4kur99.ap-northeast-1.rds.amazonaws.com
 DB_PORT=3306
 DB_DATABASE=ph5aws
 DB_USERNAME=admin
