--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -6,6 +6,11 @@ on:
 env:
   SERVICE_NAME: ph5aws
   ROLE_TO_ASSUME: arn:aws:iam::771105554154:role/GitHubActions
+  DB_HOST: ${{ secrets.DB_HOST }}
+  DB_PORT: ${{ secrets.DB_PORT }}
+  DB_DATABASE: ${{ secrets.DB_NAME }}
+  DB_USERNAME: ${{ secrets.DB_USER }}
+  DB_PASSWORD: ${{ secrets.DB_PASS }}
 jobs:
   deploy:
     name: Deploy
