--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -33,7 +33,7 @@ jobs:
         uses: aws-actions/aws-secretsmanager-get-secrets@v1
         with:
           secret-ids: |
-            SECRETS,cicd_secrets
+            SECRETS,ph5aws
           parse-json-secrets: true
 
       - name: Get AWS Account
