--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -85,6 +85,7 @@ jobs:
           wait-for-service-stability: true
           
       - name: Get Secrets from AWS Secrets Manager
+        id: get-secrets
         uses: aws-actions/aws-secretsmanager-get-secrets@v1
         with:
           secret-ids: |
@@ -93,8 +94,8 @@ jobs:
 
       - name: Write DB connection info to .env
         run: |
-          echo "DB_HOST=${{ steps.get-secrets.outputs.DB_HOST }}" >> .env
-          echo "DB_PORT=${{ steps.get-secrets.outputs.DB_PORT }}" >> .env
-          echo "DB_DATABASE=${{ steps.get-secrets.outputs.DB_NAME }}" >> .env
-          echo "DB_USERNAME=${{ steps.get-secrets.outputs.DB_USER }}" >> .env
-          echo "DB_PASSWORD=${{ steps.get-secrets.outputs.DB_PASS }}" >> .env
+          echo "DB_HOST=${{ steps.get-secrets.outputs.host }}" >> .env
+          echo "DB_PORT=${{ steps.get-secrets.outputs.port }}" >> .env
+          echo "DB_DATABASE=${{ steps.get-secrets.outputs.dbClusterIdentifier }}" >> .env
+          echo "DB_USERNAME=${{ steps.get-secrets.outputs.username }}" >> .env
+          echo "DB_PASSWORD=${{ steps.get-secrets.outputs.password }}" >> .env
