--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -88,6 +88,7 @@ jobs:
         uses: aws-actions/aws-secretsmanager-get-secrets@v1
         with:
           secret-ids: |
+            ph5aws,
             DB_HOST,host
             DB_PORT,port
             DB_DATABASE,dbClusterIdentifier
