--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -84,17 +84,17 @@ jobs:
           cluster: ${{ env.SERVICE_NAME }}
           wait-for-service-stability: true
 
-      - name: Get Secrets from AWS Secrets Manager
-        uses: aws-actions/aws-secretsmanager-get-secrets@v1
-        with:
-          secret-ids: |
-            ph5aws,
-            DB_HOST,host
-            DB_PORT,port
-            DB_DATABASE,dbClusterIdentifier
-            DB_USERNAME,username
-            DB_PASSWORD,password
-          parse-json-secrets: true
+      # - name: Get Secrets from AWS Secrets Manager
+      #   uses: aws-actions/aws-secretsmanager-get-secrets@v1
+      #   with:
+      #     secret-ids: |
+      #       ph5aws,
+      #       DB_HOST,host
+      #       DB_PORT,port
+      #       DB_DATABASE,dbClusterIdentifier
+      #       DB_USERNAME,username
+      #       DB_PASSWORD,password
+      #     parse-json-secrets: true
           
       - name: Get Secrets from AWS Secrets Manager
         id: get-secrets
