--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -91,6 +91,7 @@ jobs:
           secret-ids: |
             arn:aws:secretsmanager:ap-northeast-1:771105554154:secret:ph5aws-dM8hGE
           json: true
+          region: ap-northeast-1
 
       - name: Display secrets output
         run: |
