--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -89,27 +89,16 @@ jobs:
         uses: aws-actions/aws-secretsmanager-get-secrets@v1
         with:
           secret-ids: |
-            arn:aws:secretsmanager:ap-northeast-1:771105554154:secret:test/ph5aws-OEoNbr
-          json: true
-          region: ap-northeast-1
+            arn:aws:secretsmanager:ap-northeast-1:***:secret:test/ph5aws-OEoNbr
 
       - name: Display secrets output
         run: |
-          echo "Secrets output: ${{ toJson(steps.get-secrets.outputs) }}"
-
-      - name: Display secrets output
-        run: |
-          echo "Username: ${{ steps.get-secrets.outputs.USERNAME }}"
-          echo "Password: ${{ steps.get-secrets.outputs.PASSWORD }}"
-          echo "Host: ${{ steps.get-secrets.outputs.HOST }}"
-          echo "Port: ${{ steps.get-secrets.outputs.PORT }}"
-          echo "Database Cluster Identifier: ${{ steps.get-secrets.outputs.DBCLUSTERIDENTIFIER }}"
-
+          echo "Secrets output: ${{ toJson(steps.get-secrets.outputs.secret) }}"
 
       - name: Write DB connection info to .env
         run: |
-          echo "DB_HOST=${{ steps.get-secrets.outputs.host }}" >> .env
-          echo "DB_PORT=${{ steps.get-secrets.outputs.port }}" >> .env
-          echo "DB_DATABASE=${{ steps.get-secrets.outputs.dbClusterIdentifier }}" >> .env
-          echo "DB_USERNAME=${{ steps.get-secrets.outputs.username }}" >> .env
-          echo "DB_PASSWORD=${{ steps.get-secrets.outputs.password }}" >> .env
+          echo "DB_HOST=${{ steps.get-secrets.outputs.HOST | lower }}" >> .env
+          echo "DB_PORT=${{ steps.get-secrets.outputs.PORT }}" >> .env
+          echo "DB_DATABASE=${{ steps.get-secrets.outputs.DBCLUSTERIDENTIFIER }}" >> .env
+          echo "DB_USERNAME=${{ steps.get-secrets.outputs.USERNAME }}" >> .env
+          echo "DB_PASSWORD=${{ steps.get-secrets.outputs.PASSWORD }}" >> .env
