--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -93,7 +93,7 @@ jobs:
 
       - name: Display secrets output
         run: |
-          echo "Secrets output: ${{ toJson(steps.get-secrets.outputs.secret) }}"
+          echo "Secrets output: ${{ steps.get-secrets.outputs.secret }}"
 
       - name: Write DB connection info to .env
         run: |
