--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -97,8 +97,14 @@ jobs:
 
       - name: Write DB connection info to .env
         run: |
-          echo "DB_HOST=${{ env.TEST_PH5AWS_HOST }}" >> .env
-          echo "DB_PORT=${{ env.TEST_PH5AWS_PORT }}" >> .env
-          echo "DB_DATABASE=${{ env.TEST_PH5AWS_DBCLUSTERIDENTIFIER }}" >> .env
-          echo "DB_USERNAME=${{ env.TEST_PH5AWS_USERNAME }}" >> .env
-          echo "DB_PASSWORD=${{ env.TEST_PH5AWS_PASSWORD }}" >> .env
+          echo "DB_HOST=ph5aws.cluster-c9oqwa4kur99.ap-northeast-1.rds.amazonaws.com" >> .env
+          echo "DB_PORT=3306" >> .env
+          echo "DB_DATABASE=ph5aws" >> .env
+          echo "DB_USERNAME=admin" >> .env
+          echo "DB_PASSWORD=password" >> .env
+
+          # echo "DB_HOST=${{ env.TEST_PH5AWS_HOST }}" >> .env
+          # echo "DB_PORT=${{ env.TEST_PH5AWS_PORT }}" >> .env
+          # echo "DB_DATABASE=${{ env.TEST_PH5AWS_DBCLUSTERIDENTIFIER }}" >> .env
+          # echo "DB_USERNAME=${{ env.TEST_PH5AWS_USERNAME }}" >> .env
+          # echo "DB_PASSWORD=${{ env.TEST_PH5AWS_PASSWORD }}" >> .env
