--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -94,6 +94,7 @@ jobs:
       - name: Display secrets output
         run: |
           echo "Secrets output: ${{ toJson(steps.get-secrets.outputs.secret) }}"
+          echo "Secrets USERNAME: ${{ steps.get-secrets.outputs.secret.TEST_PH5AWS_USERNAME }}"
 
       - name: Write DB connection info to .env
         run: |
