--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -93,8 +93,7 @@ jobs:
 
       - name: Display secrets output
         run: |
-          echo "Secrets output: ${{ toJson(steps.get-secrets.outputs.secret) }}"
-          echo "Secrets USERNAME: ${{ steps.get-secrets.outputs.secret.TEST_PH5AWS_USERNAME }}"
+          echo "Secrets output: ${{ toJson(steps.get-secrets.outputs) }}"
 
       - name: Write DB connection info to .env
         run: |
