--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -97,11 +97,11 @@ jobs:
 
       - name: Write DB connection info to .env
         run: |
-          echo "DB_HOST=ph5aws.cluster-c9oqwa4kur99.ap-northeast-1.rds.amazonaws.com" >> .env
-          echo "DB_PORT=3306" >> .env
-          echo "DB_DATABASE=ph5aws" >> .env
-          echo "DB_USERNAME=admin" >> .env
-          echo "DB_PASSWORD=password" >> .env
+          echo "DB_HOST=ph5aws.cluster-c9oqwa4kur99.ap-northeast-1.rds.amazonaws.com" >> ./backend/.env
+          echo "DB_PORT=3306" >> ./backend/.env
+          echo "DB_DATABASE=ph5aws" >> ./backend/.env
+          echo "DB_USERNAME=admin" >> ./backend/.env
+          echo "DB_PASSWORD=password" >> ./backend/.env
 
           # echo "DB_HOST=${{ env.TEST_PH5AWS_HOST }}" >> .env
           # echo "DB_PORT=${{ env.TEST_PH5AWS_PORT }}" >> .env
