--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -43,6 +43,21 @@ jobs:
           docker push ${ECR_REGISTRY}/${ECR_REPOSITORY}:latest
           echo "::set-output name=image::${ECR_REGISTRY}/${ECR_REPOSITORY}:latest"
 
+            - name: Get Secrets from AWS Secrets Manager
+        id: get-secrets
+        uses: aws-actions/aws-secretsmanager-get-secrets@v2
+        with:
+          secret-ids: test/ph5aws
+          parse-json-secrets: true  # JSON形式のシークレットをパースする
+
+      - name: Write DB connection info to .env
+        run: |
+          echo "DB_HOST=ph5aws.cluster-c9oqwa4kur99.ap-northeast-1.rds.amazonaws.com" >> ./backend/.env.aws
+          echo "DB_PORT=3306" >> ./backend/.env.aws
+          echo "DB_DATABASE=ph5aws" >> ./backend/.env.aws
+          echo "DB_USERNAME=admin" >> ./backend/.env.aws
+          echo "DB_PASSWORD=password" >> ./backend/.env.aws
+
       - name: Build App
         id: build-app
         env:
@@ -84,24 +99,24 @@ jobs:
           cluster: ${{ env.SERVICE_NAME }}
           wait-for-service-stability: true
           
-      - name: Get Secrets from AWS Secrets Manager
-        id: get-secrets
-        uses: aws-actions/aws-secretsmanager-get-secrets@v2
-        with:
-          secret-ids: test/ph5aws
-          parse-json-secrets: true  # JSON形式のシークレットをパースする
+      # - name: Get Secrets from AWS Secrets Manager
+      #   id: get-secrets
+      #   uses: aws-actions/aws-secretsmanager-get-secrets@v2
+      #   with:
+      #     secret-ids: test/ph5aws
+      #     parse-json-secrets: true  # JSON形式のシークレットをパースする
 
-      - name: Display secrets output
-        run: |
-          echo "Secrets output: ${{ toJson(steps.get-secrets.outputs) }}"
+      # - name: Display secrets output
+      #   run: |
+      #     echo "Secrets output: ${{ toJson(steps.get-secrets.outputs) }}"
 
-      - name: Write DB connection info to .env
-        run: |
-          echo "DB_HOST=ph5aws.cluster-c9oqwa4kur99.ap-northeast-1.rds.amazonaws.com" >> ./backend/.env
-          echo "DB_PORT=3306" >> ./backend/.env
-          echo "DB_DATABASE=ph5aws" >> ./backend/.env
-          echo "DB_USERNAME=admin" >> ./backend/.env
-          echo "DB_PASSWORD=password" >> ./backend/.env
+      # - name: Write DB connection info to .env
+      #   run: |
+      #     echo "DB_HOST=ph5aws.cluster-c9oqwa4kur99.ap-northeast-1.rds.amazonaws.com" >> ./backend/.env
+      #     echo "DB_PORT=3306" >> ./backend/.env
+      #     echo "DB_DATABASE=ph5aws" >> ./backend/.env
+      #     echo "DB_USERNAME=admin" >> ./backend/.env
+      #     echo "DB_PASSWORD=password" >> ./backend/.env
 
           # echo "DB_HOST=${{ env.TEST_PH5AWS_HOST }}" >> .env
           # echo "DB_PORT=${{ env.TEST_PH5AWS_PORT }}" >> .env
